@@ -1,5 +1,11 @@
 2007-03-27  Eitan Isaacson  <eitan@ascender.com>
 
+	* src/lib/accerciser/accerciser.py: 
+	* src/lib/accerciser/hotkey_manager.py: Use key code instead of
+	textual representation.
+
+2007-03-27  Eitan Isaacson  <eitan@ascender.com>
+
 	* src/accerciser.glade: Set correct paned positions. Added missing
 	callbacks to main window.
 	* src/lib/accerciser/accerciser.py: Save and restore paned positions.
